images change now, not sure how to get rid of the delay between pics

--- a/creative3.css
+++ b/creative3.css
@@ -23,8 +23,9 @@
     font-size: 18px;
 }
 
-body{
+.container{
   background: url("background/background.jpg");
+  background-color: navy;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
