--- a/creative3.css
+++ b/creative3.css
@@ -12,7 +12,6 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 12px 16px;
     z-index: 1;
-    /*font-family: 'Share', cursive;*/
 }
 
 .dropdown:hover .dropdown-content {
@@ -24,7 +23,7 @@
 }
 
 .container{
-  background: url("background/background.jpg");
+  background: url("background/Background.jpg");
   background-color: navy;
   background-repeat: no-repeat;
   background-position: center;
